[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = {version = "0.8.3", features = ["full"]}
borsh = "1.5.3"
borsh-derive = "1.5.3"
brotli = "7.0.0"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = {version = "1.42.0", features = ["full"]}
