[package]
name = "bundler"
version = "0.2.5"
edition = "2021"

[lib]
name = "bundler"
path = "src/lib.rs"

[[bin]]
name = "bundler"
path = "src/main.rs"

[dependencies]
alloy = {version = "0.8.3", features = ["full", "signer-keystore"]}
borsh = "1.5.3"
borsh-derive = "1.5.3"
brotli = "7.0.0"
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = {version = "1.42.0", features = ["full"]}
thiserror = "2.0.9"
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
axum = "0.7.4"
reqwest = "0.12.12"
tower-http = {version = "0.6.2", features = ["timeout"]}
bytes = "1.10.0"
ecdsa = "0.16.9"
